[gd_scene load_steps=26 format=4 uid="uid://c70qjo31jlf7"]

[ext_resource type="Texture2D" uid="uid://cq6116t5rh5i2" path="res://Assets/Background/background1.png" id="1_hf1ha"]
[ext_resource type="Script" uid="uid://bsd8qageiko3r" path="res://Scripts/gameplay.gd" id="1_kwrm5"]
[ext_resource type="PackedScene" uid="uid://dmsxtbqexy1e7" path="res://Scenes/obstacle.tscn" id="2_rlidi"]
[ext_resource type="Texture2D" uid="uid://dqm70vijbuwgv" path="res://Assets/Background/background1Alt.png" id="2_wbxth"]
[ext_resource type="Texture2D" uid="uid://cj8gseflr0jg4" path="res://Assets/main_lev_buildB.png" id="3_m34ki"]
[ext_resource type="PackedScene" uid="uid://4k1s0lh78k5w" path="res://Scenes/soul_fragment.tscn" id="3_urrcd"]
[ext_resource type="PackedScene" uid="uid://bscf12crh6cmr" path="res://Scenes/powerup.tscn" id="4_puebw"]
[ext_resource type="PackedScene" uid="uid://bl4nwjbr5dqlr" path="res://Scenes/player.tscn" id="5_r8bcl"]
[ext_resource type="FontFile" uid="uid://cc75y11mixbtw" path="res://Assets/fonts/pixel/PixelGame-R9AZe.otf" id="8_puebw"]
[ext_resource type="Texture2D" uid="uid://dcxwy6e40b4ea" path="res://Assets/Ghosts/monster-ghost-11variations.png" id="10_jb71e"]
[ext_resource type="Texture2D" uid="uid://u8tndy3x3r5r" path="res://Assets/progress_bar.png" id="11_5i20n"]
[ext_resource type="AudioStream" uid="uid://b4iaj6j10omqb" path="res://Assets/Fields of Ice.wav" id="12_rg35f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ltefv"]
bg_color = Color(0.156863, 0.00784314, 0.137255, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 20.0
expand_margin_top = 20.0
expand_margin_right = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jb71e"]
bg_color = Color(0, 0, 0, 0.5372549)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ltefv"]

[sub_resource type="Theme" id="Theme_ltefv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rg35f"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_5i20n"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ltefv"]
texture = ExtResource("3_m34ki")
1:1/0 = 0
2:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
20:1/0 = 0
21:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
27:1/0 = 0
28:1/0 = 0
12:2/0 = 0
13:2/0 = 0
18:2/0 = 0
20:2/0 = 0
21:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
27:2/0 = 0
28:2/0 = 0
30:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
12:3/0 = 0
13:3/0 = 0
18:3/0 = 0
30:3/0 = 0
12:4/0 = 0
13:4/0 = 0
12:5/0 = 0
13:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
12:6/0 = 0
13:6/0 = 0
3:7/0 = 0
12:7/0 = 0
13:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
3:8/0 = 0
12:8/0 = 0
13:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
3:9/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
3:13/0 = 0
10:13/0 = 0
20:13/0 = 0
27:13/0 = 0
4:14/0 = 0
5:14/0 = 0
8:14/0 = 0
21:14/0 = 0
22:14/0 = 0
25:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
4:15/0 = 0
5:15/0 = 0
8:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
21:15/0 = 0
22:15/0 = 0
25:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
0:16/0 = 0
1:16/0 = 0
4:16/0 = 0
5:16/0 = 0
13:16/0 = 0
14:16/0 = 0
17:16/0 = 0
18:16/0 = 0
21:16/0 = 0
22:16/0 = 0
30:16/0 = 0
31:16/0 = 0
0:17/0 = 0
1:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
13:17/0 = 0
14:17/0 = 0
17:17/0 = 0
18:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
30:17/0 = 0
31:17/0 = 0
0:18/0 = 0
4:18/0 = 0
5:18/0 = 0
14:18/0 = 0
17:18/0 = 0
21:18/0 = 0
22:18/0 = 0
31:18/0 = 0
0:19/0 = 0
4:19/0 = 0
5:19/0 = 0
8:19/0 = 0
9:19/0 = 0
14:19/0 = 0
17:19/0 = 0
21:19/0 = 0
22:19/0 = 0
25:19/0 = 0
26:19/0 = 0
31:19/0 = 0
0:20/0 = 0
1:20/0 = 0
4:20/0 = 0
5:20/0 = 0
8:20/0 = 0
9:20/0 = 0
13:20/0 = 0
14:20/0 = 0
17:20/0 = 0
18:20/0 = 0
21:20/0 = 0
22:20/0 = 0
25:20/0 = 0
26:20/0 = 0
30:20/0 = 0
31:20/0 = 0
0:21/0 = 0
1:21/0 = 0
4:21/0 = 0
5:21/0 = 0
8:21/0 = 0
9:21/0 = 0
13:21/0 = 0
14:21/0 = 0
17:21/0 = 0
18:21/0 = 0
21:21/0 = 0
22:21/0 = 0
25:21/0 = 0
26:21/0 = 0
30:21/0 = 0
31:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
4:22/0 = 0
5:22/0 = 0
8:22/0 = 0
9:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
21:22/0 = 0
22:22/0 = 0
25:22/0 = 0
26:22/0 = 0
29:22/0 = 0
30:22/0 = 0
31:22/0 = 0
3:24/0 = 0
10:24/0 = 0
20:24/0 = 0
27:24/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
20:25/0 = 0
21:25/0 = 0
22:25/0 = 0
25:25/0 = 0
26:25/0 = 0
27:25/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
20:26/0 = 0
21:26/0 = 0
22:26/0 = 0
23:26/0 = 0
24:26/0 = 0
25:26/0 = 0
26:26/0 = 0
27:26/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
17:28/0 = 0
18:28/0 = 0
19:28/0 = 0
20:28/0 = 0
21:28/0 = 0
22:28/0 = 0
23:28/0 = 0
24:28/0 = 0
25:28/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
17:30/0 = 0
18:30/0 = 0
19:30/0 = 0
20:30/0 = 0
21:30/0 = 0
22:30/0 = 0
23:30/0 = 0
25:30/0 = 0
26:30/0 = 0
27:30/0 = 0
28:30/0 = 0
29:30/0 = 0
30:30/0 = 0

[sub_resource type="TileSet" id="TileSet_rg35f"]
sources/1 = SubResource("TileSetAtlasSource_ltefv")

[sub_resource type="AtlasTexture" id="AtlasTexture_j5vlu"]
atlas = ExtResource("10_jb71e")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ra47u"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5vlu")
}],
"loop": true,
"name": &"fragment",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r5xtw"]
texture = ExtResource("11_5i20n")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kwrm5"]
texture = ExtResource("3_m34ki")
1:1/0 = 0
2:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
20:1/0 = 0
21:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
27:1/0 = 0
28:1/0 = 0
12:2/0 = 0
13:2/0 = 0
18:2/0 = 0
20:2/0 = 0
21:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
27:2/0 = 0
28:2/0 = 0
30:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
12:3/0 = 0
13:3/0 = 0
18:3/0 = 0
30:3/0 = 0
12:4/0 = 0
13:4/0 = 0
12:5/0 = 0
13:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
12:6/0 = 0
13:6/0 = 0
3:7/0 = 0
12:7/0 = 0
13:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
3:8/0 = 0
12:8/0 = 0
13:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
3:9/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
3:13/0 = 0
10:13/0 = 0
20:13/0 = 0
27:13/0 = 0
4:14/0 = 0
5:14/0 = 0
8:14/0 = 0
21:14/0 = 0
22:14/0 = 0
25:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
4:15/0 = 0
5:15/0 = 0
8:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
21:15/0 = 0
22:15/0 = 0
25:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
0:16/0 = 0
1:16/0 = 0
4:16/0 = 0
5:16/0 = 0
13:16/0 = 0
14:16/0 = 0
17:16/0 = 0
18:16/0 = 0
21:16/0 = 0
22:16/0 = 0
30:16/0 = 0
31:16/0 = 0
0:17/0 = 0
1:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
13:17/0 = 0
14:17/0 = 0
17:17/0 = 0
18:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
30:17/0 = 0
31:17/0 = 0
0:18/0 = 0
4:18/0 = 0
5:18/0 = 0
14:18/0 = 0
17:18/0 = 0
21:18/0 = 0
22:18/0 = 0
31:18/0 = 0
0:19/0 = 0
4:19/0 = 0
5:19/0 = 0
8:19/0 = 0
9:19/0 = 0
14:19/0 = 0
17:19/0 = 0
21:19/0 = 0
22:19/0 = 0
25:19/0 = 0
26:19/0 = 0
31:19/0 = 0
0:20/0 = 0
1:20/0 = 0
4:20/0 = 0
5:20/0 = 0
8:20/0 = 0
9:20/0 = 0
13:20/0 = 0
14:20/0 = 0
17:20/0 = 0
18:20/0 = 0
21:20/0 = 0
22:20/0 = 0
25:20/0 = 0
26:20/0 = 0
30:20/0 = 0
31:20/0 = 0
0:21/0 = 0
1:21/0 = 0
4:21/0 = 0
5:21/0 = 0
8:21/0 = 0
9:21/0 = 0
13:21/0 = 0
14:21/0 = 0
17:21/0 = 0
18:21/0 = 0
21:21/0 = 0
22:21/0 = 0
25:21/0 = 0
26:21/0 = 0
30:21/0 = 0
31:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
4:22/0 = 0
5:22/0 = 0
8:22/0 = 0
9:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
21:22/0 = 0
22:22/0 = 0
25:22/0 = 0
26:22/0 = 0
29:22/0 = 0
30:22/0 = 0
31:22/0 = 0
3:24/0 = 0
10:24/0 = 0
20:24/0 = 0
27:24/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
20:25/0 = 0
21:25/0 = 0
22:25/0 = 0
25:25/0 = 0
26:25/0 = 0
27:25/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
20:26/0 = 0
21:26/0 = 0
22:26/0 = 0
23:26/0 = 0
24:26/0 = 0
25:26/0 = 0
26:26/0 = 0
27:26/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
17:28/0 = 0
18:28/0 = 0
19:28/0 = 0
20:28/0 = 0
21:28/0 = 0
22:28/0 = 0
23:28/0 = 0
24:28/0 = 0
25:28/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
17:30/0 = 0
18:30/0 = 0
19:30/0 = 0
20:30/0 = 0
21:30/0 = 0
22:30/0 = 0
23:30/0 = 0
25:30/0 = 0
26:30/0 = 0
27:30/0 = 0
28:30/0 = 0
29:30/0 = 0
30:30/0 = 0

[sub_resource type="TileSet" id="TileSet_r8bcl"]
sources/1 = SubResource("TileSetAtlasSource_kwrm5")

[node name="Gameplay" type="Node2D"]
script = ExtResource("1_kwrm5")
obstacle_scene = ExtResource("2_rlidi")
soul_fragment_scene = ExtResource("3_urrcd")
powerup_scene = ExtResource("4_puebw")

[node name="SolidBackground" type="Sprite2D" parent="."]
position = Vector2(639.88855, 768.2424)
scale = Vector2(2.977049, 3.9987378)
texture = ExtResource("1_hf1ha")

[node name="EtherealBackground" type="Sprite2D" parent="."]
position = Vector2(638.81824, 768)
scale = Vector2(2.9961584, 3.9999998)
texture = ExtResource("2_wbxth")

[node name="Player" parent="." instance=ExtResource("5_r8bcl")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 81.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 50
text = "Score: 0"

[node name="FormLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.5
offset_top = 23.0
offset_right = 47.5
offset_bottom = 75.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 57
text = "SOLID"

[node name="GameOverPanel" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -280.0
offset_right = 392.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.52)
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ltefv")

[node name="LeaderboardBoxPanel" type="Panel" parent="UI/GameOverPanel"]
visible = false
layout_mode = 0
offset_left = 120.0
offset_top = 110.52632
offset_right = 160.0
offset_bottom = 150.52632
scale = Vector2(13.16, 5.2105246)
theme_override_styles/panel = SubResource("StyleBoxFlat_jb71e")

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 0
offset_left = 80.0
offset_top = -89.47368
offset_right = 680.0
offset_bottom = 310.5263
scale = Vector2(1, 0.65789515)
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 96
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 0
offset_left = 232.0
offset_top = 68.42107
offset_right = 489.0
offset_bottom = 113.42107
scale = Vector2(1.2000048, 0.81578946)
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 36
text = "Final Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NamePromptLabel" type="Label" parent="UI/GameOverPanel"]
visible = false
layout_mode = 0
offset_left = 240.0
offset_top = 131.57895
offset_right = 532.0
offset_bottom = 161.57895
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 28
text = "NEW HIGH SCORE! ENTER NAME:"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="UI/GameOverPanel"]
visible = false
layout_mode = 0
offset_left = 328.0
offset_top = 173.68422
offset_right = 412.0
offset_bottom = 206.68422
scale = Vector2(1.0302478, 0.8120972)
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 24
placeholder_text = "Name"
alignment = 1
max_length = 5

[node name="SubmitNameButton" type="Button" parent="UI/GameOverPanel"]
visible = false
material = SubResource("CanvasItemMaterial_ltefv")
layout_mode = 0
offset_left = 320.0
offset_top = 215.78947
offset_right = 429.0
offset_bottom = 246.78947
theme = SubResource("Theme_ltefv")
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_rg35f")
text = "      Submit      "

[node name="LeaderboardLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 0
offset_left = 320.0
offset_top = 126.315796
offset_right = 482.0
offset_bottom = 160.3158
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 28
text = "LEADERBOARD: "

[node name="LeaderboardBox" type="VBoxContainer" parent="UI/GameOverPanel"]
layout_mode = 0
offset_left = 152.0
offset_top = 163.1579
offset_right = 621.0
offset_bottom = 294.15796
theme = SubResource("Theme_5i20n")

[node name="Entry1" type="Label" parent="UI/GameOverPanel/LeaderboardBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 22
text = "dddddDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD"
horizontal_alignment = 1

[node name="Entry2" type="Label" parent="UI/GameOverPanel/LeaderboardBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 22
text = "dddddDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD"
horizontal_alignment = 1

[node name="Entry3" type="Label" parent="UI/GameOverPanel/LeaderboardBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 22
text = "dddddDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD"
horizontal_alignment = 1

[node name="Entry4" type="Label" parent="UI/GameOverPanel/LeaderboardBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 22
text = "dddddDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD"
horizontal_alignment = 1

[node name="Entry5" type="Label" parent="UI/GameOverPanel/LeaderboardBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 22
text = "dddddDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD"
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 0
offset_left = 224.0
offset_top = 326.3158
offset_right = 536.0
offset_bottom = 376.3158
scale = Vector2(1, 0.84210527)
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 36
text = "Press R To Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TileMap" type="TileMap" parent="UI"]
position = Vector2(-73, -73)
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_rg35f")
format = 2
layer_0/tile_data = PackedInt32Array(655364, 1376257, 14, 720900, 1376257, 15, 786436, 1376257, 16, 655365, 1441793, 14, 720901, 1441793, 15, 786437, 1441793, 16, 851972, 1376257, 14, 917508, 1376257, 15, 983044, 1376257, 16, 851973, 1441793, 14, 917509, 1441793, 15, 983045, 1441793, 16, 1048580, 1376257, 14, 1114116, 1376257, 15, 1179652, 1376257, 16, 1048581, 1441793, 14, 1114117, 1441793, 15, 1179653, 1441793, 16)

[node name="Sprite2D" type="AnimatedSprite2D" parent="UI"]
texture_filter = 1
position = Vector2(86.99999, 245)
scale = Vector2(2.443049, 2.037974)
sprite_frames = SubResource("SpriteFrames_ra47u")
animation = &"fragment"
autoplay = "default"

[node name="SoulMeterContainer" type="HBoxContainer" parent="UI"]
offset_left = 77.0
offset_top = 250.0
offset_right = 117.0
offset_bottom = 750.0
scale = Vector2(4.754952, 71.17903)

[node name="SoulMeter" type="ProgressBar" parent="UI/SoulMeterContainer"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxTexture_r5xtw")
min_value = 1.0
max_value = 15.0
value = 8.0
fill_mode = 3
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="PowerupLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -283.0
offset_right = 225.0
offset_bottom = -246.01727
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.85337925, 1.2979032)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 30
text = "dddddddddddddddddddddddddddddd"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Directional TIps" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 265.0
offset_top = -75.0
offset_right = 601.0
offset_bottom = -36.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 38
text = "LEFT/RIGHT/DOWN: MOVE"

[node name="Directional TIps2" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 821.0
offset_top = -73.0
offset_right = 1175.0
offset_bottom = -32.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_puebw")
theme_override_font_sizes/font_size = 38
text = "Shift/Q: phase "

[node name="Borders" type="TileMapLayer" parent="."]
position = Vector2(-75, -10.000002)
scale = Vector2(2.39, 2.39)
tile_map_data = PackedByteArray("AAAgAAEAAQAIAA4AAAAgAAIAAQAIAA4AAAAgAAMAAQAIAA4AAAAgAAQAAQAIAA4AAAAgAAUAAQAIAA4AAAAgAAYAAQAIAA4AAAAgAAcAAQAIAA4AAAAgAAgAAQAIAA4AAAAgAAkAAQAIAA4AAAAgAAoAAQAIAA4AAAAgAAsAAQAIAA4AAAAhAAEAAQAIAA4AAAAhAAIAAQAIAA4AAAAhAAMAAQAIAA4AAAAhAAQAAQAIAA4AAAAhAAUAAQAIAA4AAAAhAAYAAQAIAA4AAAAhAAcAAQAIAA4AAAAiAAEAAQAIAA4AAAAiAAIAAQAIAA4AAAAiAAMAAQAIAA4AAAAiAAQAAQAIAA4AAAAiAAUAAQAIAA4AAAAiAAYAAQAIAA4AAAAiAAcAAQAIAA4AAAAiAAgAAQAIAA4AAAAiAAkAAQAIAA4AAAAiAAoAAQAIAA4AAAAjAAEAAQAIAA4AAAAjAAIAAQAIAA4AAAAjAAMAAQAIAA4AAAAjAAQAAQAIAA4AAAAjAAUAAQAIAA4AAAAjAAYAAQAIAA4AAAAjAAcAAQAIAA4AAAAjAAgAAQAIAA4AAAAjAAkAAQAIAA4AAAAjAAoAAQAIAA4AAAAjAAsAAQAIAA4AAAAgAAwAAQAIAA4AAAAgAA0AAQAIAA4AAAAgAA4AAQAIAA4AAAAgAA8AAQAIAA4AAAAgABAAAQAIAA4AAAAgABEAAQAIAA4AAAAgABIAAQAIAA4AAAAgABMAAQAIAA4AAAAgABQAAQAIAA4AAAAgABUAAQAIAA4AAAAgABYAAQAIAA4AAAAgABcAAQAIAA4AAAAhAAwAAQAIAA4AAAAhAA0AAQAIAA4AAAAhAA4AAQAIAA4AAAAhAA8AAQAIAA4AAAAhABAAAQAIAA4AAAAhABEAAQAIAA4AAAAhABIAAQAIAA4AAAAhABMAAQAIAA4AAAAhABQAAQAIAA4AAAAhABUAAQAIAA4AAAAhABYAAQAIAA4AAAAhABcAAQAIAA4AAAAiAA8AAQAIAA4AAAAiABAAAQAIAA4AAAAiABEAAQAIAA4AAAAiABIAAQAIAA4AAAAiABMAAQAIAA4AAAAiABQAAQAIAA4AAAAiABUAAQAIAA4AAAAiABYAAQAIAA4AAAAiABcAAQAIAA4AAAAjAAwAAQAIAA4AAAAjAA0AAQAIAA4AAAAjAA4AAQAIAA4AAAAjABAAAQAIAA4AAAAjABEAAQAIAA4AAAAjABIAAQAIAA4AAAAjABMAAQAIAA4AAAAjABQAAQAIAA4AAAAjABUAAQAIAA4AAAAjABYAAQAIAA4AAAAjABcAAQAIAA4AAAACAAEAAQAIAA4AAAACAAIAAQAIAA4AAAADAAEAAQAIAA4AAAADAAIAAQAIAA4AAAACAAMAAQAIAA4AAAACAAQAAQAIAA4AAAACAAUAAQAIAA4AAAADAAMAAQAIAA4AAAACAAYAAQAIAA4AAAACAAcAAQAIAA4AAAACAAgAAQAIAA4AAAADAAcAAQAIAA4AAAADAAgAAQAIAA4AAAACAAkAAQAIAA4AAAACAAoAAQAIAA4AAAACAAsAAQAIAA4AAAADAAkAAQAIAA4AAAADAAoAAQAIAA4AAAADAAsAAQAIAA4AAAACAAwAAQAIAA4AAAACAA0AAQAIAA4AAAACAA4AAQAIAA4AAAADAAwAAQAIAA4AAAADAA0AAQAIAA4AAAADAA4AAQAIAA4AAAAEAA8AAQAIAA4AAAAEABAAAQAIAA4AAAAEABEAAQAIAA4AAAAFAA8AAQAIAA4AAAAFABAAAQAIAA4AAAAFABEAAQAIAA4AAAAEABIAAQAIAA4AAAAEABMAAQAIAA4AAAAEABQAAQAIAA4AAAAFABIAAQAIAA4AAAAFABMAAQAIAA4AAAAFABQAAQAIAA4AAAACABIAAQAIAA4AAAACABMAAQAIAA4AAAACABQAAQAIAA4AAAADABIAAQAIAA4AAAADABMAAQAIAA4AAAADABQAAQAIAA4AAAACAA8AAQAIAA4AAAACABAAAQAIAA4AAAACABEAAQAIAA4AAAADAA8AAQAIAA4AAAADABAAAQAIAA4AAAADABEAAQAIAA4AAAAEAAwAAQAIAA4AAAAEAA0AAQAIAA4AAAAEAA4AAQAIAA4AAAAFAAwAAQAIAA4AAAAFAA0AAQAIAA4AAAAFAA4AAQAIAA4AAAAEAAkAAQAIAA4AAAAEAAoAAQAIAA4AAAAEAAsAAQAIAA4AAAAFAAkAAQAIAA4AAAAFAAoAAQAIAA4AAAAFAAsAAQAIAA4AAAAEAAcAAQAIAA4AAAAEAAgAAQAIAA4AAAAFAAYAAQAIAA4AAAAFAAcAAQAIAA4AAAAFAAgAAQAIAA4AAAAEAAMAAQAIAA4AAAAFAAMAAQAIAA4AAAAEAAEAAQAIAA4AAAAEAAIAAQAIAA4AAAAFAAEAAQAIAA4AAAAFAAIAAQAIAA4AAAACABUAAQAIAA4AAAACABYAAQAIAA4AAAADABUAAQAIAA4AAAADABYAAQAIAA4AAAACABcAAQAIAA4AAAACABgAAQAIAA4AAAADABcAAQAIAA4AAAADABgAAQAIAA4AAAACABkAAQAIAA4AAAACABoAAQAIAA4AAAADABkAAQAIAA4AAAADABoAAQAIAA4AAAAEABUAAQAIAA4AAAAFABUAAQAIAA4AAAAEABYAAQAIAA4AAAAEABcAAQAIAA4AAAAFABYAAQAIAA4AAAAFABcAAQAIAA4AAAAEABgAAQAIAA4AAAAEABkAAQAIAA4AAAAFABgAAQAIAA4AAAAFABkAAQAIAA4AAAAEABoAAQAIAA4AAAAEABsAAQAIAA4AAAAFABoAAQAIAA4AAAAFABsAAQAIAA4AAAACABsAAQAIAA4AAAACABwAAQAIAA4AAAADABsAAQAIAA4AAAADABwAAQAIAA4AAAACAB0AAQAIAA4AAAADAB0AAQAIAA4AAAADAB4AAQAIAA4AAAADAB8AAQAIAA4AAAADACAAAQAIAA4AAAACACIAAQAIAA4AAAADACEAAQAIAA4AAAADACIAAQAIAA4AAAACACMAAQAIAA4AAAACACQAAQAIAA4AAAADACMAAQAIAA4AAAADACQAAQAIAA4AAAAEABwAAQAIAA4AAAAEAB0AAQAIAA4AAAAFABwAAQAIAA4AAAAFAB0AAQAIAA4AAAAEAB4AAQAIAA4AAAAEAB8AAQAIAA4AAAAFAB4AAQAIAA4AAAAFAB8AAQAIAA4AAAAEACAAAQAIAA4AAAAEACEAAQAIAA4AAAAFACAAAQAIAA4AAAAFACEAAQAIAA4AAAAEACIAAQAIAA4AAAAEACMAAQAIAA4AAAAFACIAAQAIAA4AAAAFACMAAQAIAA4AAAAEACQAAQAIAA4AAAAEACUAAQAIAA4AAAAFACQAAQAIAA4AAAAFACUAAQAIAA4AAAAEACYAAQAIAA4AAAAEACcAAQAIAA4AAAAFACYAAQAIAA4AAAAFACcAAQAIAA4AAAACACYAAQAIAA4AAAACACcAAQAIAA4AAAADACYAAQAIAA4AAAADACcAAQAIAA4AAAACACUAAQAIAA4AAAADACUAAQAIAA4AAAAgABgAAQAIAA4AAAAhABgAAQAIAA4AAAAgABkAAQAIAA4AAAAgABoAAQAIAA4AAAAhABkAAQAIAA4AAAAhABoAAQAIAA4AAAAiABgAAQAIAA4AAAAjABgAAQAIAA4AAAAiABkAAQAIAA4AAAAiABoAAQAIAA4AAAAjABkAAQAIAA4AAAAjABoAAQAIAA4AAAAiABsAAQAIAA4AAAAiABwAAQAIAA4AAAAjABsAAQAIAA4AAAAjABwAAQAIAA4AAAAiAB0AAQAIAA4AAAAiAB4AAQAIAA4AAAAjAB0AAQAIAA4AAAAjAB4AAQAIAA4AAAAiAB8AAQAIAA4AAAAiACAAAQAIAA4AAAAjAB8AAQAIAA4AAAAjACAAAQAIAA4AAAAiACcAAQAIAA4AAAAiACgAAQAIAA4AAAAjACcAAQAIAA4AAAAjACgAAQAIAA4AAAAiACUAAQAIAA4AAAAiACYAAQAIAA4AAAAjACUAAQAIAA4AAAAjACYAAQAIAA4AAAAiACMAAQAIAA4AAAAiACQAAQAIAA4AAAAjACMAAQAIAA4AAAAjACQAAQAIAA4AAAAgACMAAQAIAA4AAAAgACQAAQAIAA4AAAAhACMAAQAIAA4AAAAhACQAAQAIAA4AAAAgACEAAQAIAA4AAAAgACIAAQAIAA4AAAAhACEAAQAIAA4AAAAhACIAAQAIAA4AAAAgAB8AAQAIAA4AAAAgACAAAQAIAA4AAAAhAB8AAQAIAA4AAAAhACAAAQAIAA4AAAAgAB0AAQAIAA4AAAAgAB4AAQAIAA4AAAAhAB0AAQAIAA4AAAAhAB4AAQAIAA4AAAAgABsAAQAIAA4AAAAgABwAAQAIAA4AAAAhABsAAQAIAA4AAAAhABwAAQAIAA4AAAAiACEAAQAIAA4AAAAiACIAAQAIAA4AAAAjACEAAQAIAA4AAAAjACIAAQAIAA4AAAAgACUAAQAIAA4AAAAgACYAAQAIAA4AAAAhACUAAQAIAA4AAAAhACYAAQAIAA4AAAAgACcAAQAIAA4AAAAgACgAAQAIAA4AAAAhACcAAQAIAA4AAAAhACgAAQAIAA4AAAAEACgAAQAIAA4AAAAFACgAAQAIAA4AAAACACgAAQAIAA4AAAADACgAAQAIAA4AAAAGAAIAAQAIABUAAAAGAAMAAQAIABYAAAAGAAQAAQAIABUAAAAHAAMAAQAJABYAAAAHAAQAAQAJABUAAAAGAAUAAQAIABYAAAAGAAYAAQAIABUAAAAGAAcAAQAIABYAAAAGAAgAAQAIABUAAAAHAAUAAQAJABYAAAAHAAYAAQAJABUAAAAHAAcAAQAJABYAAAAHAAgAAQAJABUAAAAGAAkAAQAIABYAAAAGAAoAAQAIABUAAAAGAAsAAQAIABYAAAAGAAwAAQAIABUAAAAHAAkAAQAJABYAAAAHAAoAAQAJABUAAAAHAAsAAQAJABYAAAAHAAwAAQAJABUAAAAGAA0AAQAIABYAAAAGAA4AAQAIABUAAAAGAA8AAQAIABYAAAAHAA0AAQAJABYAAAAHAA4AAQAJABUAAAAHAA8AAQAJABYAAAAGABAAAQAIABUAAAAGABEAAQAIABYAAAAGABIAAQAIABUAAAAGABMAAQAIABYAAAAHABAAAQAJABUAAAAHABEAAQAJABYAAAAHABIAAQAJABUAAAAHABMAAQAJABYAAAAGABQAAQAIABUAAAAGABUAAQAIABYAAAAGABYAAQAIABUAAAAGABcAAQAIABYAAAAHABQAAQAJABUAAAAHABUAAQAJABYAAAAHABYAAQAJABUAAAAHABcAAQAJABYAAAAGABgAAQAIABUAAAAGABkAAQAIABYAAAAGABoAAQAIABUAAAAGABsAAQAIABYAAAAHABgAAQAJABUAAAAHABkAAQAJABYAAAAHABoAAQAJABUAAAAHABsAAQAJABYAAAAGABwAAQAIABUAAAAGAB0AAQAIABYAAAAGAB4AAQAIABUAAAAGAB8AAQAIABYAAAAHABwAAQAJABUAAAAHAB0AAQAJABYAAAAHAB4AAQAJABUAAAAHAB8AAQAJABYAAAAGACAAAQAIABUAAAAGACEAAQAIABYAAAAGACIAAQAIABUAAAAGACMAAQAIABYAAAAHACAAAQAJABUAAAAHACEAAQAJABYAAAAHACIAAQAJABUAAAAHACMAAQAJABYAAAAGACQAAQAIABUAAAAGACUAAQAIABYAAAAGACYAAQAIABUAAAAGACcAAQAIABYAAAAHACQAAQAJABUAAAAHACUAAQAJABYAAAAHACYAAQAJABUAAAAHACcAAQAJABYAAAAeAAEAAQAIABYAAAAeAAIAAQAIABUAAAAeAAMAAQAIABYAAAAeAAQAAQAIABUAAAAfAAEAAQAJABYAAAAfAAIAAQAJABUAAAAfAAMAAQAJABYAAAAfAAQAAQAJABUAAAAeAAUAAQAIABYAAAAeAAYAAQAIABUAAAAeAAcAAQAIABYAAAAeAAgAAQAIABUAAAAfAAUAAQAJABYAAAAfAAYAAQAJABUAAAAfAAcAAQAJABYAAAAfAAgAAQAJABUAAAAeAAkAAQAIABYAAAAeAAoAAQAIABUAAAAeAAsAAQAIABYAAAAeAAwAAQAIABUAAAAfAAkAAQAJABYAAAAfAAoAAQAJABUAAAAfAAsAAQAJABYAAAAfAAwAAQAJABUAAAAeAA0AAQAIABYAAAAeAA4AAQAIABUAAAAeAA8AAQAIABYAAAAeABAAAQAIABUAAAAfAA0AAQAJABYAAAAfAA4AAQAJABUAAAAfAA8AAQAJABYAAAAfABAAAQAJABUAAAAeABEAAQAIABYAAAAeABIAAQAIABUAAAAeABMAAQAIABYAAAAeABQAAQAIABUAAAAfABEAAQAJABYAAAAfABIAAQAJABUAAAAfABMAAQAJABYAAAAfABQAAQAJABUAAAAeABUAAQAIABYAAAAeABYAAQAIABUAAAAeABcAAQAIABYAAAAeABgAAQAIABUAAAAfABUAAQAJABYAAAAfABYAAQAJABUAAAAfABcAAQAJABYAAAAfABgAAQAJABUAAAAeABkAAQAIABYAAAAeABoAAQAIABUAAAAeABsAAQAIABYAAAAeABwAAQAIABUAAAAfABkAAQAJABYAAAAfABoAAQAJABUAAAAfABsAAQAJABYAAAAfABwAAQAJABUAAAAeAB0AAQAIABYAAAAeAB4AAQAIABUAAAAeAB8AAQAIABYAAAAeACAAAQAIABUAAAAfAB0AAQAJABYAAAAfAB4AAQAJABUAAAAfAB8AAQAJABYAAAAfACAAAQAJABUAAAAeACEAAQAIABYAAAAeACIAAQAIABUAAAAeACMAAQAIABYAAAAeACQAAQAIABUAAAAfACEAAQAJABYAAAAfACIAAQAJABUAAAAfACMAAQAJABYAAAAfACQAAQAJABUAAAAeACUAAQAIABYAAAAeACYAAQAIABUAAAAeACcAAQAIABYAAAAeACgAAQAIABUAAAAfACUAAQAJABYAAAAfACYAAQAJABUAAAAfACcAAQAJABYAAAAfACgAAQAJABUAAAAiAA4AAQAIAA4AAAAiAA0AAQAIAA4AAAAiAAwAAQAIAA4AAAAhAAsAAQAIAA4AAAAhAAoAAQAIAA4AAAAhAAkAAQAIAA4AAAAhAAgAAQAIAA4AAAAiAAsAAQAIAA4AAAAEAAAAAQAIAA4AAAADAAAAAQAIAA4AAAACAAAAAQAIAA4AAAAGAAAAAQAIABUAAAAGAAEAAQAIABYAAAAHAAAAAQAJABUAAAAHAAEAAQAJABYAAAAHAAIAAQAJABUAAAAGACgAAQAIABMAAAAHACgAAQAJABMAAAAeAAAAAQAIABUAAAAfAAAAAQAJABUAAAAFAAAAAQAIAA4AAAAgAAAAAQAIAA4AAAAhAAAAAQAIAA4AAAAiAAAAAQAIAA4AAAAjAAAAAQAIAA4AAAACACEAAQAIAA4AAAACACAAAQAIAA4AAAACAB8AAQAIAA4AAAACAB4AAQAIAA4AAAAGAP7/AQAIABUAAAAGAP//AQAIABYAAAAHAP7/AQAJABUAAAAHAP//AQAJABYAAAAGAPz/AQAIABUAAAAGAP3/AQAIABYAAAAHAPz/AQAJABUAAAAHAP3/AQAJABYAAAAeAP7/AQAIABUAAAAeAP//AQAIABYAAAAfAP7/AQAJABUAAAAfAP//AQAJABYAAAAeAPz/AQAIABUAAAAeAP3/AQAIABYAAAAfAPz/AQAJABUAAAAfAP3/AQAJABYAAAAgAPz/AQAIAA4AAAAgAP3/AQAIAA4AAAAgAP7/AQAIAA4AAAAgAP//AQAIAA4AAAAhAPz/AQAIAA4AAAAhAP3/AQAIAA4AAAAhAP7/AQAIAA4AAAAhAP//AQAIAA4AAAAiAPz/AQAIAA4AAAAiAP3/AQAIAA4AAAAiAP7/AQAIAA4AAAAiAP//AQAIAA4AAAAjAPz/AQAIAA4AAAAjAP3/AQAIAA4AAAAjAP7/AQAIAA4AAAAjAP//AQAIAA4AAAACAPz/AQAIAA4AAAACAP3/AQAIAA4AAAACAP7/AQAIAA4AAAACAP//AQAIAA4AAAADAPz/AQAIAA4AAAADAP3/AQAIAA4AAAADAP7/AQAIAA4AAAADAP//AQAIAA4AAAAEAPz/AQAIAA4AAAAEAP3/AQAIAA4AAAAEAP7/AQAIAA4AAAAEAP//AQAIAA4AAAAFAPz/AQAIAA4AAAAFAP3/AQAIAA4AAAAFAP7/AQAIAA4AAAAFAP//AQAIAA4AAAAFAAQAAQAIAA4AAAAFAAUAAQAIAA4AAAADAAQAAQAIAA4AAAAEAAQAAQAIAA4AAAAEAAUAAQAIAA4AAAADAAUAAQAIAA4AAAADAAYAAQAIAA4AAAAEAAYAAQAIAA4AAAAjAA8AAQAIAA4AAAA=")
tile_set = SubResource("TileSet_r8bcl")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_rg35f")
autoplay = true

[connection signal="pressed" from="UI/GameOverPanel/SubmitNameButton" to="." method="_on_submit_name_button_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
